bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q5 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST]@2) as product, ENC_PT(first_value(productLabel) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST]@3) as productLabel]
  SortExec: TopK(fetch=5), expr=[AS_SORTABLE_BYTES(ENC_TF(ENC_PT(productLabel)))@0 ASC, product@1 ASC], preserve_partitioning=[false], sort_prefix=[AS_SORTABLE_BYTES(ENC_TF(ENC_PT(productLabel)))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as AS_SORTABLE_BYTES(ENC_TF(ENC_PT(productLabel))), product@1 as product], aggr=[first_value(product) ORDER BY [__common_expr_1 AS AS_SORTABLE_BYTES(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST] as first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST], first_value(productLabel) ORDER BY [__common_expr_1 AS AS_SORTABLE_BYTES(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST] as first_value(productLabel) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[AS_SORTABLE_BYTES(ENC_TF(ENC_PT(productLabel@1))) as __common_expr_1, product@0 as product, productLabel@1 as productLabel]
        SortExec: expr=[AS_SORTABLE_BYTES(ENC_TF(ENC_PT(productLabel@1))) ASC], preserve_partitioning=[false]
          ProjectionExec: expr=[product@0 as product, productLabel@1 as productLabel]
            NestedLoopJoinExec: join_type=Inner, filter=EBV(LT(join_proj_push_down_5@0, join_proj_push_down_7@2)) AND EBV(GT(join_proj_push_down_6@1, join_proj_push_down_8@3)), projection=[product@0, productLabel@1, simProperty1@2, simProperty2@3, origProperty1@4, origProperty2@7]
              ProjectionExec: expr=[product@0 as product, productLabel@1 as productLabel, simProperty1@2 as simProperty1, simProperty2@3 as simProperty2, origProperty1@4 as origProperty1, ENC_TF(ENC_PT(simProperty2@3)) as join_proj_push_down_5, ENC_TF(ENC_PT(simProperty2@3)) as join_proj_push_down_6]
                NestedLoopJoinExec: join_type=Inner, filter=EBV(LT(join_proj_push_down_1@0, join_proj_push_down_3@2)) AND EBV(GT(join_proj_push_down_2@1, join_proj_push_down_4@3)), projection=[product@0, productLabel@1, simProperty1@2, simProperty2@3, origProperty1@6]
                  ProjectionExec: expr=[product@0 as product, productLabel@1 as productLabel, simProperty1@2 as simProperty1, simProperty2@3 as simProperty2, ENC_TF(ENC_PT(simProperty1@2)) as join_proj_push_down_1, ENC_TF(ENC_PT(simProperty1@2)) as join_proj_push_down_2]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(prodFeature@4, prodFeature@0)], projection=[product@0, productLabel@1, simProperty1@2, simProperty2@3]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, productLabel@1, simProperty1@2, simProperty2@3, prodFeature@5]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, productLabel@1, simProperty1@2, simProperty2@4]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, productLabel@1, simProperty1@3]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?productLabel], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as product, object@3 as productLabel], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/2000/01/rdf-schema#label> AND subject@1 != <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/2000/01/rdf-schema#label> AND <http://www.w3.org/2000/01/rdf-schema#label> <= predicate_max@2 AND subject_null_count@7 != row_count@4 AND (subject_min@5 != <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> OR <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> != subject_max@6), required_guarantees=[predicate in (<http://www.w3.org/2000/01/rdf-schema#label>), subject not in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890>)]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?simProperty1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as product, object@3 as simProperty1], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1>)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?simProperty2], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as product, object@3 as simProperty2], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2>)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?prodFeature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as product, object@3 as prodFeature], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?prodFeature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet:0..9865932]]}, projection=[object@3 as prodFeature], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <= predicate_max@6, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>), subject in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890>)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?origProperty1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet:0..9865932]]}, projection=[object@3 as origProperty1, ADD(ENC_TF(ENC_PT(object@3)), 5:4:120) as join_proj_push_down_3, SUB(ENC_TF(ENC_PT(object@3)), 5:4:120) as join_proj_push_down_4], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1>, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> <= predicate_max@6, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1>), subject in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?origProperty2], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet:0..9865932]]}, projection=[object@3 as origProperty2, ADD(ENC_TF(ENC_PT(object@3)), 5:4:170) as join_proj_push_down_7, SUB(ENC_TF(ENC_PT(object@3)), 5:4:170) as join_proj_push_down_8], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2>, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> <= predicate_max@6, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2>), subject in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890>)]
