bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q5 (Optimized, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST] AS product, first_value(productLabel) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST] AS productLabel
  Sort: AS_SORTABLE_BYTES(ENC_TF(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST, fetch=5
    Aggregate: groupBy=[[__common_expr_1 AS AS_SORTABLE_BYTES(ENC_TF(productLabel)), product]], aggr=[[first_value(product) ORDER BY [__common_expr_1 AS AS_SORTABLE_BYTES(ENC_TF(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST] AS first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST], first_value(productLabel) ORDER BY [__common_expr_1 AS AS_SORTABLE_BYTES(ENC_TF(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST] AS first_value(productLabel) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST]]]
      Projection: AS_SORTABLE_BYTES(ENC_TF(productLabel)) AS __common_expr_1, product, productLabel
        Sort: AS_SORTABLE_BYTES(ENC_TF(productLabel)) ASC NULLS FIRST
          BasicGraphPattern: projection=[product, productLabel], columns_to_decode=[origProperty1, origProperty2, product, productLabel, simProperty1, simProperty2], filters=[NOT EBV(EQ(Union 1:0:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890, ENC_TF(product))) AND EBV(LT(ENC_TF(simProperty1), ADD(ENC_TF(origProperty1), Union 4:4:120))) AND EBV(GT(ENC_TF(simProperty1), SUB(ENC_TF(origProperty1), Union 4:4:120))) AND EBV(LT(ENC_TF(simProperty2), ADD(ENC_TF(origProperty2), Union 4:4:170))) AND EBV(GT(ENC_TF(simProperty2), SUB(ENC_TF(origProperty2), Union 4:4:170))) AS EBV(BOOLEAN_AS_TERM(EBV(BOOLEAN_AS_TERM(EBV(BOOLEAN_AS_TERM(NOT EBV(EQ(ENC_TF(Struct({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890,data_type:,language_tag:})),ENC_TF(product))))) AND EBV(BOOLEAN_AS_TERM(EBV(LT(ENC_TF(simProperty1),ADD(ENC_TF(origProperty1),ENC_TF(Struct({term_type:2,value:120,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:}))))) AND EBV(GT(ENC_TF(simProperty1),SUB(ENC_TF(origProperty1),ENC_TF(Struct({term_type:2,value:120,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:}))))))))) AND EBV(BOOLEAN_AS_TERM(EBV(LT(ENC_TF(simProperty2),ADD(ENC_TF(origProperty2),ENC_TF(Struct({term_type:2,value:170,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:}))))) AND EBV(GT(ENC_TF(simProperty2),SUB(ENC_TF(origProperty2),ENC_TF(Struct({term_type:2,value:170,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:})))))))))]
            QuadPattern: triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?productLabel]
            QuadPattern: triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?prodFeature]
            QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?prodFeature]
            QuadPattern: triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?origProperty1]
            QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?simProperty1]
            QuadPattern: triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?origProperty2]
            QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?simProperty2]
