bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q7 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(productLabel@0) as productLabel, ENC_PT(offer@1) as offer, ENC_PT(price@2) as price, ENC_PT(vendor@3) as vendor, ENC_PT(vendorTitle@4) as vendorTitle, ENC_PT(review@5) as review, ENC_PT(revTitle@8) as revTitle, ENC_PT(reviewer@6) as reviewer, ENC_PT(revName@7) as revName, ENC_PT(rating1@9) as rating1, ENC_PT(rating2@10) as rating2]
  NestedLoopJoinExec: join_type=Left
    NestedLoopJoinExec: join_type=Left
      DataSourceExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801>, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?productLabel
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, price@1, vendor@2, vendorTitle@3]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0), (vendor@2, vendor@1)], projection=[offer@0, price@1, vendor@2, vendorTitle@3]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@2, vendor@0)], projection=[offer@0, price@1, vendor@2, vendorTitle@3]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@2, vendor@0)], projection=[offer@0, price@1, vendor@2, vendorTitle@4]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, price@1, vendor@3]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, price@2]
                  DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801>
                  DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price>, object=?price, additional_filters=[DynamicFilter [ Generation 2; offer in (<object id range>) ]]
                DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor>, object=?vendor, additional_filters=[DynamicFilter [ Generation 2; offer in (<object id range>) ]]
              DataSourceExec: [GPOS] subject=?vendor, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?vendorTitle, additional_filters=[DynamicFilter [ Generation 2; vendor in (<object id range>) ]]
            DataSourceExec: [GPOS] subject=?vendor, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country>, object=<http://downlode.org/rdf/iso-3166/countries#DE>, additional_filters=[DynamicFilter [ Generation 2; vendor in (<object id range>) ]]
          DataSourceExec: [GPOS] subject=?offer, predicate=<http://purl.org/dc/elements/1.1/publisher>, object=?vendor, additional_filters=[DynamicFilter [ Generation 1; Unknown true ]]
        FilterExec: EBV(GT(ENC_TF(date@1), 5:{date_time_type:0,value:63349516800.000000000000000000,offset:})), projection=[offer@0]
          DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo>, object=?date, additional_filters=[DynamicFilter [ Generation 1; Unknown true ]]
    HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, reviewer@1, revName@2, revTitle@3, rating1@4, rating2@6]
      HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, reviewer@1, revName@2, revTitle@3, rating1@5]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, reviewer@1, revName@2, revTitle@4]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@1, reviewer@0)], projection=[review@0, reviewer@1, revName@3]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, reviewer@2]
              DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801>
              DataSourceExec: [GPOS] subject=?review, predicate=<http://purl.org/stuff/rev#reviewer>, object=?reviewer, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
            DataSourceExec: [GPOS] subject=?reviewer, predicate=<http://xmlns.com/foaf/0.1/name>, object=?revName, additional_filters=[DynamicFilter [ Generation 2; reviewer in (<object id range>) ]]
          DataSourceExec: [GPOS] subject=?review, predicate=<http://purl.org/dc/elements/1.1/title>, object=?revTitle, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
        DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1>, object=?rating1
      DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2>, object=?rating2
